--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     position: relative;
 }
 
-.textbox{
+/* .textbox{
     color: white;
     position: absolute;
     top: 50%;
@@ -38,4 +38,45 @@
     color: white;
     background-color: transparent;
     border: none;
+} */
+
+.textbox{
+    position: absolute;
+    top: 50%;
+    left: 20%;
+
+    overflow: hidden;
+    border: 3px dashed transparent;
+    padding: 10px;
+    min-width: 5rem;
+    box-sizing: border-box;
+}
+
+.textbox:focus{
+    resize: horizontal;
+    outline: 3px dashed #5B8FB9;
+}
+
+.textbox textarea{
+    background-color: transparent;
+    color: white;
+    font-size: 3rem;
+    border: 3px dashed transparent;
+    resize: none;
+    overflow: hidden;
+
+    width: 100%;
+}
+
+.textbox textarea:focus{
+    outline: none;
+}
+
+.cover{
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    /* z-index: 100; */
+    position: absolute;
+    top: 0%;
 }
