--- a/style.css
+++ b/style.css
@@ -12,33 +12,7 @@
     position: relative;
 }
 
-/* .textbox{
-    color: white;
-    position: absolute;
-    top: 50%;
-    left: 20%;
-
-    box-sizing: border-box;
-    width: fit-content;
-    padding: 10px;
-    border: 3px dashed transparent;
-}
-
-.textbox:focus{
-    border: 3px dashed #5B8FB9;
-    resize: both;
-    overflow: auto;
-}
-
-.textbox input{
-    display: block;
-    font-size: 4rem;
-    width: 100%;
-    height: 100%;
-    color: white;
-    background-color: transparent;
-    border: none;
-} */
+/* ------------------------TEXTBOX------------------ */
 
 .textbox{
     position: absolute;
@@ -50,6 +24,9 @@
     padding: 10px;
     min-width: 5rem;
     box-sizing: border-box;
+
+    color: white;
+    font-size: 18px;
 }
 
 .textbox:focus{
@@ -57,26 +34,54 @@
     outline: 3px dashed #5B8FB9;
 }
 
-.textbox textarea{
-    background-color: transparent;
-    color: white;
-    font-size: 3rem;
-    border: 3px dashed transparent;
-    resize: none;
-    overflow: hidden;
-
+.cover{
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    background-color: red;
 }
 
-.textbox textarea:focus{
-    outline: none;
+/* ------------------------RICH TEXT EDITOR------------------ */
+
+.ql-toolbar{
+    background-color: #F7EFE5;
+}
+
+.editor-container{
+    height: 50vh !important;
+}
+.editor-container .ql-editor{
+    overflow-y: auto;
+    font-size: 18px;
 }
 
 .cover{
     width: 100%;
     height: 100%;
     background-color: transparent;
-    /* z-index: 100; */
     position: absolute;
     top: 0%;
+}
+
+/* ------------------------RICH TEXT EDITOR (OVERRIDE)------------------ */
+.ql-align-right{
+    text-align: right;
+}
+.ql-align-left{
+    text-align: left;
+}
+.ql-align-center{
+    text-align: center;
+}
+.ql-align-justify{
+    text-align: justify;
+}
+
+.ql-font-serif {
+    font-family: Georgia, Times New Roman, serif;
+}
+.ql-font-monospace {
+    font-family: Monaco, Courier New, monospace;
 }
