Upload local image

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,10 @@
     position: relative;
 }
 
+.input-btn {
+    display: none;
+}
+
 /* ------------------------TEXTBOX------------------ */
 
 .textbox{
